; ModuleID = '/home/carl/AnghaBench/netdata/libnetdata/url/extr_url.c_url_map_query_string.c'
source_filename = "/home/carl/AnghaBench/netdata/libnetdata/url/extr_url.c_url_map_query_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"3f\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"3F\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @url_map_query_string(i8** %0, i8* %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i8** %0, i8*** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = load i8**, i8*** %3, align 8
  %10 = load i8*, i8** %4, align 8
  store i32 0, i32* %5, align 4
  %11 = load i8*, i8** %4, align 8
  store i8* %11, i8** %6, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = load i8**, i8*** %3, align 8
  %14 = load i32, i32* %5, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* %5, align 4
  %16 = sext i32 %14 to i64
  %17 = getelementptr inbounds i8*, i8** %13, i64 %16
  store i8* %12, i8** %17, align 8
  br label %18

18:                                               ; preds = %34, %2
  %19 = load i8*, i8** %6, align 8
  %20 = icmp ne i8* %19, null
  br i1 %20, label %21, label %36

21:                                               ; preds = %18
  %22 = load i8*, i8** %6, align 8
  %23 = getelementptr inbounds i8, i8* %22, i64 1
  %24 = call i8* @strchr(i8* %23, i8 signext 38)
  store i8* %24, i8** %7, align 8
  %25 = load i8*, i8** %7, align 8
  %26 = icmp ne i8* %25, null
  br i1 %26, label %27, label %34

27:                                               ; preds = %21
  %28 = load i8*, i8** %7, align 8
  %29 = load i8**, i8*** %3, align 8
  %30 = load i32, i32* %5, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %5, align 4
  %32 = sext i32 %30 to i64
  %33 = getelementptr inbounds i8*, i8** %29, i64 %32
  store i8* %28, i8** %33, align 8
  br label %34

34:                                               ; preds = %27, %21
  %35 = load i8*, i8** %7, align 8
  store i8* %35, i8** %6, align 8
  br label %18

36:                                               ; preds = %18
  %37 = load i32, i32* %5, align 4
  %38 = icmp eq i32 %37, 1
  br i1 %38, label %39, label %71

39:                                               ; preds = %36
  %40 = load i8*, i8** %4, align 8
  store i8* %40, i8** %6, align 8
  br label %41

41:                                               ; preds = %68, %39
  %42 = load i8*, i8** %6, align 8
  %43 = icmp ne i8* %42, null
  br i1 %43, label %44, label %70

44:                                               ; preds = %41
  %45 = load i8*, i8** %6, align 8
  %46 = getelementptr inbounds i8, i8* %45, i64 1
  %47 = call i8* @strchr(i8* %46, i8 signext 37)
  store i8* %47, i8** %7, align 8
  %48 = load i8*, i8** %7, align 8
  %49 = icmp ne i8* %48, null
  br i1 %49, label %50, label %68

50:                                               ; preds = %44
  %51 = load i8*, i8** %7, align 8
  %52 = getelementptr inbounds i8, i8* %51, i64 1
  store i8* %52, i8** %8, align 8
  %53 = load i8*, i8** %8, align 8
  %54 = call i32 @strncmp(i8* %53, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 2)
  %55 = icmp ne i32 %54, 0
  br i1 %55, label %56, label %60

56:                                               ; preds = %50
  %57 = load i8*, i8** %8, align 8
  %58 = call i32 @strncmp(i8* %57, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32 2)
  %59 = icmp ne i32 %58, 0
  br i1 %59, label %67, label %60

60:                                               ; preds = %56, %50
  %61 = load i8*, i8** %7, align 8
  %62 = load i8**, i8*** %3, align 8
  %63 = load i32, i32* %5, align 4
  %64 = add nsw i32 %63, 1
  store i32 %64, i32* %5, align 4
  %65 = sext i32 %63 to i64
  %66 = getelementptr inbounds i8*, i8** %62, i64 %65
  store i8* %61, i8** %66, align 8
  br label %67

67:                                               ; preds = %60, %56
  br label %68

68:                                               ; preds = %67, %44
  %69 = load i8*, i8** %7, align 8
  store i8* %69, i8** %6, align 8
  br label %41

70:                                               ; preds = %41
  br label %71

71:                                               ; preds = %70, %36
  %72 = load i32, i32* %5, align 4
  ret i32 %72
}

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i32 @strncmp(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
